--- a/JakartaLearningProject/Base.lproj/Main.storyboard
+++ b/JakartaLearningProject/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Kota Tua Map" translatesAutoresizingMaskIntoConstraints="NO" id="umf-Dj-Xva">
-                                        <rect key="frame" x="0.0" y="0.0" width="414.00000000000023" height="725.00000000000023"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -582,7 +582,7 @@
                                     <constraint firstItem="uIJ-tV-Wvo" firstAttribute="centerY" secondItem="BzQ-gU-AbU" secondAttribute="centerY" id="SsW-zt-65D"/>
                                     <constraint firstAttribute="trailing" secondItem="uIJ-tV-Wvo" secondAttribute="trailing" id="czJ-v5-nbF"/>
                                     <constraint firstItem="uIJ-tV-Wvo" firstAttribute="centerX" secondItem="BzQ-gU-AbU" secondAttribute="centerX" id="vQg-dV-0SP"/>
-                                    <constraint firstAttribute="bottom" secondItem="uIJ-tV-Wvo" secondAttribute="bottom" id="xEm-zs-jrg"/>
+                                    <constraint firstAttribute="bottom" secondItem="uIJ-tV-Wvo" secondAttribute="bottom" constant="100" id="xEm-zs-jrg"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
